TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "124586594473472" [label="Start"];
  "124586594473472" -> "124586594469104";
  "124586594469104" [label="Code"];
  "124586594469104" -> "124586594482208";
  "124586594482208" [label="Function"];
  "124586594482208" -> "124586594475584";
  "124586594482208" -> "124586594475728";
  "124586594482208" -> "124586594474624";
  "124586594475584" [label="main"];
  "124586594475728" [label="Parameters"];
  "124586594474624" [label="Code"];
  "124586594474624" -> "124586594469680";
  "124586594474624" -> "124586594307472";
  "124586594474624" -> "124586594599600";
  "124586594469680" [label="printf"];
  "124586594469680" -> "124586594470784";
  "124586594469680" -> "124586594318272";
  "124586594470784" [label="\"%d; \""];
  "124586594318272" [label="Expr"];
  "124586594318272" -> "124586594307232";
  "124586594318272" -> "124586594315728";
  "124586594307232" [label="9"];
  "124586594315728" [label="++"];
  "124586594307472" [label="printf"];
  "124586594307472" -> "124586594306416";
  "124586594307472" -> "124586594320288";
  "124586594306416" [label="\"%d; \""];
  "124586594320288" [label="Expr"];
  "124586594320288" -> "124586594313904";
  "124586594320288" -> "124586594599312";
  "124586594313904" [label="--"];
  "124586594599312" [label="11"];
  "124586594599600" [label="Return"];
  "124586594599600" -> "124586594600320";
  "124586594600320" [label="1"];
}
